Fix spacing variables in global styles; update Home component height for improved layout

--- a/frontend/src/assets/styles/global.css
+++ b/frontend/src/assets/styles/global.css
@@ -31,7 +31,7 @@
   --space-m: 24pt;
   --space-l: 32pt;
   --space-xl: 48pt;
-  --space-xxl: 56pt
+  --space-xxl: 56pt;
   --space-xxxl: 80pt;
   --space-margin-large: 165pt;
   --reset-space: 0;
